# iso20022-cbpr-ur

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
additional_prompts/: id_generation_spec.md
initial_prompt/: initial.md
src/cbpr_rules/: __init__.py  cli.py  engine.py  helpers.py  idgen.py  loader.py  message.py  models.py  registry.py  schema.py
test_files/2025/: CBPR+ p.8.1.1.a pacs.008 AtoB.xml  CBPR+ p.8.1.1.a pacs.008 CtoD_1.xml  CBPR+ p.9.1.2.a camt.054-DtoE.xml  CBPR+ pn.1.2.1.a camt.052 A to I.xml  CBPR2025.PACS008-MinMax-0023.xml  CBPR2025.PACS008-MinMax-0023_diff_wrapper_missing_bic_xsd_issue.xml  camt052_account_report_sample.xml  camt_52_cbprplus_sample_xsd_issue.xml  cbprplus_camt054_slash_in_instrid.xml  cbprplus_pacs008_2025.xml  cbprplus_pacs008_sample_bic_mismatch.xml  cbprplus_pacs008_sample_dodgy_IBAN_and_bic_mismatch.xml  cbprplus_pacs008_sample_tag_mismatch_issue.xml  cbprplus_pacs008_sample_xsd_issue.xml  cbprplus_pacs008_sequence_addr.xml  pacs004_payment_return_sample.xml  pacs008_credit_transfer_sample.xml  pacs009_fi_transfer_sample.xml
test_files/2026/: camt052_account_report_sample.xml  camt054_credit_notification_sample.xml  cbprplus_pacs008_2026.xml  pacs002_status_report_sample.xml  pacs004_payment_return_sample.xml  pacs008_credit_transfer_sample.xml  pain001_credit_initiation_sample.xml
tests/: conftest.py  test_examples.py  test_idgen.py
tests/fixtures/: camt_052_2025_invalid.xml  camt_052_2025_valid.xml  camt_052_2026_invalid.xml  camt_052_2026_valid.xml  camt_054_2025_invalid.xml  camt_054_2025_valid.xml  camt_054_2026_invalid.xml  camt_054_2026_valid.xml  mini.xsd  mini_invalid.xml  mini_valid.xml  pacs008_invalid.xml  pacs008_valid.xml  pacs_002_2025_invalid.xml  pacs_002_2025_valid.xml  pacs_002_2026_invalid.xml  (+28 more)
tools/: gen_examples.py  spreadsheet.py
(+127 files in other folders)
